--- a/index.html
+++ b/index.html
@@ -1,6 +1,26 @@
 <!Doctype HTML>
 <Html>
+<head>
+  <link rel="stylesheet" href="/style.css">
+</head>
 <body>
-  <h1>I'm gay</h1>
+  <script src="/script.js"></script>
+
+  <div>
+  <table>
+    <tr>
+      <td><img onclick="select_container(1);" class="container-img" src="/img/container1.png"></td>
+      <td><img onclick="select_container(2);" class="container-img" src="/img/container2.png"></td>
+    </tr>
+    <tr>
+      <td><img onclick="select_container(3);" class="container-img" src="/img/container3.png"></td>
+      <td><img onclick="select_container(4);" class="container-img" src="/img/container4.png"></td>
+    </tr>
+  </table>
+  </div>
+  <div id="calculating-zone">
+
+  </div>
+  <p id="alert-zone"></p>
 </body>
 </Html>
