--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 </head>
 <body>
   <script src="/script.js"></script>
-
-  <div>
+  <h1>เครื่องมือวัดปริมาณทรายอะเบท</h1>
+  <p class="info">เลือกรูปทรงภาชนะที่ตรงหรือใกล้เคียงรูปภาพต่อไปนี้</p>
+  <div id="select-zone">
   <table>
     <tr>
       <td><img onclick="select_container(1);" class="container-img" src="/img/container1.png"></td>
@@ -19,6 +20,7 @@
   </table>
   </div>
   <div id="calculating-zone">
+
 
   </div>
   <p id="alert-zone"></p>
