--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <Html>
 <head>
   <link rel="stylesheet" href="/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <script src="/script.js"></script>
