--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
   </div>
   <p id="alert-zone"></p>
-  <a href="secret.html">กดเพื่อไปหน้าลับ</a>
+  <footer>
+    <p>จัดทำโดย<br>
+      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
+      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
+  </footer>
 </body>
 </Html>
