--- a/index.html
+++ b/index.html
@@ -12,13 +12,22 @@
   <div id="select-zone">
   <table>
     <tr>
-      <td><img onclick="select_container(1);" class="container-img" src="/img/container1.png"></td>
-      <td><img onclick="select_container(2);" class="container-img" src="/img/container2.png"></td>
+      <td><img onclick="select_container(1);" class="container-img" src="/img/container1.jpg"></td>
+      <td><img onclick="select_container(2);" class="container-img" src="/img/container2.jpg"></td>
     </tr>
     <tr>
-      <td><img onclick="select_container(3);" class="container-img" src="/img/container3.png"></td>
-      <td><img onclick="select_container(4);" class="container-img" src="/img/container4.png"></td>
+      <td><img onclick="select_container(3);" class="container-img" src="/img/container3.jpg"></td>
+      <td><img onclick="select_container(4);" class="container-img" src="/img/container4.jpg"></td>
     </tr>
+    <tr>
+      <td><img onclick="select_container(5);" class="container-img" src="/img/container5.jpg"></td>
+      <td><img onclick="select_container(6);" class="container-img" src="/img/container6.jpg"></td>
+    </tr>
+    <tr>
+      <td><img onclick="select_container(7);" class="container-img" src="/img/container7.jpg"></td>
+      <td><img onclick="select_container(8);" class="container-img" src="/img/container8.jpg"></td>
+    </tr>
+    
   </table>
   </div>
   <div id="calculating-zone">
@@ -26,6 +35,7 @@
 
   </div>
   <p id="alert-zone"></p>
+  <p2>พบข้อสงสัย <a href="problem.html">จิ้มที่นี่</a></p2>
   <footer>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
