--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-  <p2>พบข้อสงสัย <a href="problem.html">แตะที่นี่</a></p2>
+  <p2>กดที่นี่ <a href="calculator.html">แตะที่นี่</a></p2>
   <footer>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
