--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <Html>
 <head>
   <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Itim" rel="stylesheet">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-
-  <p2>กดที่นี่ <a href="calculator.html">แตะที่นี่</a></p2>
+<script src="/script.js"></script>
+  <table>
+    <td colspan='2'><button class='index-button' onclick="goToPage(2)">เครื่องมือวัดปริมาณทรายอะเบท</button></td>
+  </table>
   <footer>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
