--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,9 @@
 </head>
 <body>
   <script src="/script.js"></script>
-  <h1 style="margin-bottom: -10px;">เครื่องมือวัดปริมาณทรายอะเบท&#129439;</h1>
+  <h1 style="margin-bottom: -10px;">
+    <table><tr><td>เครื่องมือวัดปริมาณทรายอะเบท&#129439;</td></tr></table>
+  </h1>
   <p class="info">
     &#128218;<a style="text-decoration:underline;">วิธีการใช้งาน</a>&#128218;
     <br>1. แตะที่รูปทรงภาชนะที่ตรงหรือใกล้เคียงรูปภาพด้านล่าง
@@ -42,7 +44,11 @@
 
   </div>
   <p id="alert-zone"></p>
-  <p2>พบข้อสงสัย <a href="problem.html">แตะที่นี่</a></p2>
+  <p2>พบข้อสงสัย <a href="problem.html">แตะที่นี่</a>
+    <table>
+     <td colspan='2'><button class='index-button' onclick="goToPage(0)">ย้อนกลับสู่หน้าหลัก</button></td>
+    </table>
+  </p2>
   <footer>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
