--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 <body>
 <script src="/script.js"></script>
+<h1 style="margin-bottom: -10px;">
+  <table><tr><td>ชื่อนวัตกรรม</td></tr></table>
+</h1>
+<p>
   <table>
-    <td colspan='2'><button class='index-button' onclick="goToPage(2)">เครื่องมือวัดปริมาณทรายอะเบท</button></td>
+    <tr><td colspan='2'><button class='index-button' onclick="goToPage(1)">ความรู้</button></td></tr>
+    <tr><td colspan='2'><button class='index-button' onclick="goToPage(2)">เครื่องมือวัดปริมาณทรายอะเบท</button></td></tr>
   </table>
+</p>
   <footer>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
