--- a/problem.html
+++ b/problem.html
@@ -1,13 +1,16 @@
 <!Doctype HTML>
 <Html>
 <head>
-    <link rel="stylesheet" href="/style.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Itim" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <a href="index.html">ย้อนกลับ</a>
+<script src="/script.js"></script>
     <footer>
+        <button class="back-button" onclick="goToPage(2)">ย้อนกลับ</button>
         <p>จัดทำโดย<br>
           นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
           โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
