--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <script src="/script.js"></script>
-  <h1 style="margin-bottom: -10px;">
+  <h1 style="margin-bottom: 0px;">
     <table><tr><td>เครื่องมือวัดปริมาณทรายอะเบท&#129439;</td></tr></table>
   </h1>
   <p class="info">
@@ -26,7 +26,7 @@
     </tr>
     <tr>
       <td><img onclick="select_container(3);" class="container-img" src="/img/container3.jpg"></td>
-      <td><img onclick="select_container(4);" class="container-img" src="/img/container4.jpg"></td>
+      <td><img onclick="select_container(4);" class="container-img" src="/img/container4.png"></td>
     </tr>
     <tr>
       <td><img onclick="select_container(5);" class="container-img" src="/img/container5.jpg"></td>
@@ -47,6 +47,7 @@
   <p2>พบข้อสงสัย <a href="problem.html">แตะที่นี่</a>
   </p2>
   <footer>
+    <button class="back-button" onclick="goToPage(0)">ย้อนกลับสู่หน้าหลัก</button>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
       โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
