--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <script src="/script.js"></script>
+  <div class="bigbox"></div>
   <h1 style="margin-bottom: 0px;">
     <table><tr><td>เครื่องมือวัดปริมาณทรายอะเบท&#129439;</td></tr></table>
   </h1>
