--- a/calculator.html
+++ b/calculator.html
@@ -9,9 +9,12 @@
 </head>
 <body>
   <script src="/script.js"></script>
-  <div class="bigbox"></div>
+  <button class="back-button" onclick="goToPage(0)">ย้อนกลับสู่หน้าหลัก</button>
+  <div class="blank"></div>
   <h1 style="margin-bottom: 0px;">
-    <table><tr><td>เครื่องมือวัดปริมาณทรายอะเบท&#129439;</td></tr></table>
+    <table>
+      <tr><td>เครื่องมือวัดปริมาณทรายอะเบท&#129439;</td></tr>
+    </table>
   </h1>
   <p class="info">
     &#128218;<a style="text-decoration:underline;">วิธีการใช้งาน</a>&#128218;
@@ -39,16 +42,13 @@
     </tr>
     
   </table>
-  </div>
-  <div id="calculating-zone">
-
 
   </div>
+  <div id="calculating-zone"></div>
   <p id="alert-zone"></p>
-  <p2>พบข้อสงสัย <a href="problem.html">แตะที่นี่</a>
+  <p2>พบข้อสงสัย? &#9758;<a href="problem.html">แตะที่นี่</a>&#9756;
   </p2>
   <footer>
-    <button class="back-button" onclick="goToPage(0)">ย้อนกลับสู่หน้าหลัก</button>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
       โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
