--- a/index.html
+++ b/index.html
@@ -13,9 +13,12 @@
   <table><tr><td>ชื่อนวัตกรรม</td></tr></table>
 </h1>
 <p>
-  <table>
-    <tr><td colspan='2'><button class='index-button' onclick="goToPage(1)">ความรู้</button></td></tr>
-    <tr><td colspan='2'><button class='index-button' onclick="goToPage(2)">เครื่องมือวัดปริมาณทรายอะเบท</button></td></tr>
+  <button class='index-button' onclick="goToPage(1)">&#129699; เครื่องมือวัดปริมาณทรายอะเบท &#128208;</button>
+  <table style="padding: 10px; background-color: rgba(255, 186, 186, 0.368); border-radius: 10px;">
+    <tr><td colspan='2' class="space"><a class='index'>&#128209; ความรู้เกี่ยวกับโรคไข้เลือดออก &#128209;</td></tr>
+    <tr><td><button class='space2 knowledge-button info' onclick="goToPage(2)">โรคไข้เลือดออก</button></td></tr>
+    <tr><td><button class='knowledge-button info' onclick="goToPage(3)">ทำความรู้จักกับยุงลาย</button></td></tr>
+    <tr><td><button class='knowledge-button info' onclick="goToPage(4)">5ป 1ข ปราบยุงลาย ป้องกันไข้เลือดออก</button></td></tr>
   </table>
 </p>
   <footer>
