--- a/problem.html
+++ b/problem.html
@@ -8,9 +8,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+
+    <script src="/test.js"></script>
+
+    <button class="back-button" onclick="goToPage(1)">ย้อนกลับ</button>
+    <div class="blank"></div>
+    <h1 style="margin-bottom: 0px;">
+        <table>
+          <tr><td>&#10067;คำถามที่พบบ่อย&#129300;</td></tr>
+        </table>
+    </h1>
+    <table>
+        <tr>
+            <td></td>
+        </tr>
+    </table>
 <script src="/script.js"></script>
     <footer>
-        <button class="back-button" onclick="goToPage(2)">ย้อนกลับ</button>
         <p>จัดทำโดย<br>
           นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
           โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
