--- a/DHF.html
+++ b/DHF.html
@@ -17,13 +17,13 @@
     </table>
   </h1>
   <p class="info">
-    <table style='width: 450px; margin-bottom: 20px;'>
-    <tr><td>
-      พบครั้งแรกในทวีปเอเชีย ยุงลายบ้านเป็นพาหะหลัก มียุงลายสวนเป็นพาหะรองนำเชื้อไวรัสเดงกี
+    <table style='margin-bottom: 20px;'>
+    <tr><td class="info">
+      พบครั้งแรกในทวีปเอเชีย ยุงลายบ้านเป็นพาหะหลัก <br>มียุงลายสวนเป็นพาหะรองนำเชื้อไวรัสเดงกี
       ทำให้เกิดโรคไข้เลือดออก พบผู้ป่วยทุกเพศ ทุกวัย โดยเฉพาะผู้ที่ขาดภูมิคุ้มกัน
     </td></tr>
   </table>
-  <table style='width: 450px; margin-bottom: 20px; text-align: left;'>
+  <table style='margin-bottom: 20px; text-align: left;'>
     <tr><td class="index">
       อาการที่ควรเฝ้าระวัง
     <tr><td style="padding-top: 10px;"><a class='order'>1.</a> หลังจากถูกยุงลายที่มีเชื้อกัดประมาณ 5-8 วัน จะมีอาการไข้ 
@@ -37,7 +37,7 @@
     <tr><td><a class='order'>5.</a> อาการทั่วไปคล้ายเป็นหวัด แต่มักไม่ไอ และไม่มีน้ำมูก
     </td></tr>
   </table>
-  <a>ที่มาของข้องมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
+  <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
 
   </p>
 <footer>
