--- a/aedes.html
+++ b/aedes.html
@@ -17,9 +17,9 @@
     </table>
   </h1>
   <p class="info">
-    <table style='width: 400px; margin-bottom: 20px;'>
+    <table style='margin-bottom: 20px;'>
       <tr><td class="index">
-        ยุงเป็นพาหะโรคใดบ้าง
+        ยุงเป็นพาหะโรคใดบ้าง?
       <tr><td style="padding: 10px;"><a class='order'>ยุงลาย</a> ไข้เลือดออก ชิคุนกุนยา ไข้เหลือง ไข้ซิก้า 
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/aedes.webp">
@@ -37,12 +37,12 @@
       <tr><td><img class="mosquito-image" src="/img/anopheles.jpg">
       </td></tr>
     </table>
-    <table style='width: 450px; margin-bottom: 20px;'>
+    <table style='margin-bottom: 20px;'>
       <tr><td class="index">
         วัฏจักรของยุง
       <tr><td style="padding-top: 10px;">ยุงมีการเปลี่ยนแปลงรูปร่าง 4 ระยะ คือ ระยะไข่ (egg) ระยะลูกน้ำ (larva) ระยะตัวโม่ง (pupa) และระยะตัวเต็มวัย (adult)
       </td></tr>
-      <tr><td><img style="width: 470px;" src="/img/cycle.gif">
+      <tr><td><img id="cycle-image" src="/img/cycle.gif">
       </td></tr>
       <tr><td style="padding: 10px;"><a class='order'>ระยะไข่ (egg)</a>ระยะไข่ใช้เวลา 1-3 วันจึงฟักออกมาเป็นลูกน้ำในยุงบางชนิด เช่น ยุงลาย ไข่	
         สามารถอยู่ในสภาพแห้งได้หลายเดือนจนกระทั่งเป็นปี เมื่อมีน้ำก็จะฟักออกมาเป็นลูกน้ำ 
@@ -71,7 +71,7 @@
       <tr><td><img class="mosquito-image" src="/img/aedes.webp">
       </td></tr>
     </table>
-    <a>ที่มาของข้องมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
+    <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
   </p>
 <footer>
     <p>จัดทำโดย<br>
