--- a/prevent.html
+++ b/prevent.html
@@ -13,13 +13,42 @@
   <div class="blank"></div>
   <h1 style="margin-bottom: 0px;">
     <table>
-      <tr><td>&#129439;โรคไข้เลือดออก (Dengue hemorrhagic fever)&#129656;</td></tr>
+      <tr><td>&#129439;5ป 1ข ปราบยุงลาย ป้องกันไข้เลือดออก&#129656;</td></tr>
     </table>
   </h1>
+  <p class="info">
+    <table style='margin-bottom: 20px;'>
+      <tr><td style="padding: 10px;"><a class='order'>ป1</a>ปิด ภาชนะเก็บกักน้ำให้มิดชิด
+      </td></tr>
+      <tr><td><img class="mosquito-image" src="/img/close.jpg">
+      </td></tr>
+      <tr><td style="padding: 10px;"><a class='order'>ป2</a>เปลี่ยน น้ำในภาชนะต่าง ๆ ทุก 7 วัน เพื่อตัดวงจรลูกน้ำ
+      </td></tr>
+      <tr><td><img class="mosquito-image" src="/img/change.webp">
+      </td></tr>
+      <tr><td style="padding: 10px;"><a class='order'>ป3</a>ปล่อย ปลากินลูกน้ำในภาชนะใส่น้ำถาวร เช่น อ่างบัว 
+      </td></tr>
+      <tr><td><img class="mosquito-image" src="/img/fish.jpg">
+      </td></tr>
+      <tr><td style="padding: 10px;"><a class='order'>ป4</a>ปรับปรุง สิ่งแวดล้อมให้โปร่งลมพัดผ่านได้ไม่ให้ยุงมาเกาะพัก
+      </td></tr>
+      <tr><td><img class="mosquito-image" src="/img/home.jpeg">
+      </td></tr>
+      <tr><td style="padding: 10px;"><a class='order'>ป5</a>ปฏิบัติ ตามทั้ง 4ป ข้างต้นเป็นประจำจนเป็นนิสัย
+      </td></tr>
+      <tr><td><img class="mosquito-image" src="/img/schedule.jpg">
+      </td></tr>
+      <tr><td style="padding: 10px;"><a class='order'>1ข</a>ขัดล้างไข่ยุงลาย โดยขัดล้างภาชนะใส่น้ำก่อนเปลี่ยนน้ำใหม่ทุกสัปดาห์ เพื่อกำจัดไข่ยุงลาย 
+      </td></tr>
+      <tr><td><img class="mosquito-image" src="/img/clean.webp">
+      </td></tr>
+    </table>
+    <a>ที่มาของข้อมูล : กรมควบคุมโรค กระทรวงสาธารณสุข</a>
+  </p>
 <footer>
     <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
       โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
-  </footer>
+</footer>
 </body>
 </Html>
