--- a/prevent.html
+++ b/prevent.html
@@ -17,7 +17,7 @@
     </table>
   </h1>
   <p class="info">
-    <table style='margin-bottom: 20px;'>
+    <table class="info" style='margin-bottom: 20px;'>
       <tr><td style="padding: 10px;"><a class='order'>ป1</a>ปิด ภาชนะเก็บกักน้ำให้มิดชิด
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/close.jpg">
