--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <h1 style="margin-bottom: -10px;">
   <table><tr><td>ชื่อนวัตกรรม</td></tr></table>
 </h1>
-<p>
+<p class="info">
   <button class='index-button' onclick="goToPage(1)">&#129699; เครื่องมือวัดปริมาณทรายอะเบท &#128208;</button>
+  <button class='index-button' onclick="goToPage(5)">&#129439;ข้อมูลทรายอะเบท&#129514;</button>
   <table style="padding: 10px; background-color: rgba(255, 186, 186, 0.368); border-radius: 10px;">
     <tr><td colspan='2' class="space"><a class='index'>&#128209; ความรู้เกี่ยวกับโรคไข้เลือดออก &#128209;</td></tr>
     <tr><td><button class='space2 knowledge-button info' onclick="goToPage(2)">โรคไข้เลือดออก</button></td></tr>
