--- a/DHF.html
+++ b/DHF.html
@@ -20,7 +20,7 @@
     <table style='margin-bottom: 20px;'>
     <tr><td class="info">
       พบครั้งแรกในทวีปเอเชีย ยุงลายบ้านเป็นพาหะหลัก <br>มียุงลายสวนเป็นพาหะรองนำเชื้อไวรัสเดงกี
-      ทำให้เกิดโรคไข้เลือดออก พบผู้ป่วยทุกเพศ ทุกวัย โดยเฉพาะผู้ที่ขาดภูมิคุ้มกัน
+      ทำให้เกิด<br>โรคไข้เลือดออก พบผู้ป่วยทุกเพศ ทุกวัย โดยเฉพาะ<br>ผู้ที่ขาดภูมิคุ้มกัน
     </td></tr>
   </table>
   <table style='margin-bottom: 20px; text-align: left;'>
