--- a/abate.html
+++ b/abate.html
@@ -40,9 +40,9 @@
     <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
   </p>
 <footer>
-    จัดทำโดย<br>
+    <p>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
-      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด
+      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
   </footer>
 </body>
 </Html>
