--- a/aedes.html
+++ b/aedes.html
@@ -66,7 +66,7 @@
       <tr><td><img class="mosquito-image" src="/img/pupa.jpg">
       </td></tr>
       <tr><td style="padding: 10px;"><a class='order'>ระยะตัวเต็มวัย (adult)</a>ลักษณะของยุงแบ่งออกเป็น 3 ส่วน ได้แก่ <br>ส่วนหัว ส่วนอก 
-        และส่วนท้อง ซึ่งยุงแต่	ละชนิดจะมีลักษณะที่สำคัญแตกต่าง
+        และส่วนท้อง ซึ่งยุงแต่ละชนิดจะมีลักษณะที่สำคัญแตกต่าง
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/aedes.webp">
       </td></tr>
@@ -74,9 +74,9 @@
     <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
   </p>
 <footer>
-    <p>จัดทำโดย<br>
+    <div>จัดทำโดย<br>
       นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
-      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
+      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</div>
   </footer>
 </body>
 </Html>
