--- a/calculator.html
+++ b/calculator.html
@@ -46,7 +46,7 @@
   </div>
   <div id="calculating-zone"></div>
   <p id="alert-zone"></p>
-  <p2>พบข้อสงสัย? &#9758;<a href="problem.html">แตะที่นี่</a>&#9756;
+  <p2 style="margin-bottom: 10px;">พบข้อสงสัย? &#9758;<a href="problem.html">แตะที่นี่</a>&#9756;
   </p2>
   <footer>
     <p>จัดทำโดย<br>
