--- a/aedes.html
+++ b/aedes.html
@@ -73,10 +73,10 @@
     </table>
     <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
   </p>
-<footer>
-    <div>จัดทำโดย<br>
-      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
-      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</div>
+  <footer>
+    <p>จัดทำโดย<br>
+      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร<br>จังหวัดชลบุรี<br>
+      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
   </footer>
 </body>
 </Html>
