--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
     <tr><td><button class='space2 knowledge-button info' onclick="goToPage(2)">โรคไข้เลือดออก</button></td></tr>
     <tr><td><button class='knowledge-button info' onclick="goToPage(3)">ทำความรู้จักกับยุงลาย</button></td></tr>
     <tr><td><button class='knowledge-button info' onclick="goToPage(4)">5ป 1ข ปราบยุงลาย ป้องกันไข้เลือดออก</button></td></tr>
+    <tr><td><button class='knowledge-button info' onclick="goToPage(6)">3 เก็บ ป้องกัน 3 โรค</button></td></tr>
   </table>
 </p>
-  <footer>
-    <p>จัดทำโดย<br>
-      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
-      โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
-  </footer>
+<footer>
+  <p>จัดทำโดย<br>
+    นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร<br>จังหวัดชลบุรี<br>
+    โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
+</footer>
 </body>
 </Html>
