--- a/problem.html
+++ b/problem.html
@@ -57,9 +57,9 @@
         </td></tr>
     </table>
     <footer>
-        <div>จัดทำโดย<br>
-          นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
-          โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</div>
+      <p>จัดทำโดย<br>
+        นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร<br>จังหวัดชลบุรี<br>
+        โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
     </footer>
 </body>
 </Html>
