--- a/abate.html
+++ b/abate.html
@@ -39,9 +39,9 @@
 
     <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
   </p>
-<footer>
+  <footer>
     <p>จัดทำโดย<br>
-      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
+      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร<br>จังหวัดชลบุรี<br>
       โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
   </footer>
 </body>
