--- a/calculator.html
+++ b/calculator.html
@@ -18,9 +18,11 @@
   </h1>
   <p class="info">
     &#128218;<a style="text-decoration:underline;">วิธีการใช้งาน</a>&#128218;
-    <br>1. แตะที่รูปทรงภาชนะที่ตรงหรือใกล้เคียงรูปภาพด้านล่าง
-    <br>2. วัดขนาดของภาชนะเพื่อนำมากรอกในช่องด้านล่าง
-    <br>3. แตะปุ่ม "คำนวณ" เพื่อคำนวณหาปริมาณทรายอะเบทที่ต้องใส่ในภาชนะ
+    <table style="text-align: left;"><tr><td>
+    <a class="order">1.</a> แตะที่รูปทรงภาชนะที่ตรงหรือใกล้เคียงรูปภาพด้านล่าง</td></tr><tr><td>
+    <a class="order">2.</a> วัดขนาดของภาชนะเพื่อนำมากรอกในช่องด้านล่าง</td></tr><tr><td>
+    <a class="order">3.</a> แตะปุ่ม "คำนวณ" เพื่อคำนวณหาปริมาณทรายอะเบทที่ต้องใส่ในภาชนะ</td></tr>
+    </table>
   </p>
   <div id="select-zone">
   <table>
@@ -50,7 +52,7 @@
   </p2>
   <footer>
     <p>จัดทำโดย<br>
-      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร จังหวัดชลบุรี<br>
+      นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร<br>จังหวัดชลบุรี<br>
       โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านเซิด</p>
   </footer>
 </body>
