--- a/calculator.html
+++ b/calculator.html
@@ -18,7 +18,7 @@
   </h1>
   <p class="info">
     &#128218;<a style="text-decoration:underline;">วิธีการใช้งาน</a>&#128218;
-    <table style="text-align: left;"><tr><td>
+    <table class="info" style="text-align: left;"><tr><td>
     <a class="order">1.</a> แตะที่รูปทรงภาชนะที่ตรงหรือใกล้เคียงรูปภาพด้านล่าง</td></tr><tr><td>
     <a class="order">2.</a> วัดขนาดของภาชนะเพื่อนำมากรอกในช่องด้านล่าง</td></tr><tr><td>
     <a class="order">3.</a> แตะปุ่ม "คำนวณ" เพื่อคำนวณหาปริมาณทรายอะเบทที่ต้องใส่ในภาชนะ</td></tr>
