--- a/DHF.html
+++ b/DHF.html
@@ -13,32 +13,42 @@
   <div class="blank"></div>
   <h1 style="margin-bottom: 0px;">
     <table>
-      <tr><td>&#129439;โรคไข้เลือดออก<br>(Dengue hemorrhagic fever)&#129656;</td></tr>
+      <tr><td>&#129439;โรคไข้เลือดออกเดงกี่<br>(Dengue fever)&#129656;</td></tr>
     </table>
   </h1>
   <p class="info">
     <table style='margin-bottom: 20px;'>
-    <tr><td class="info">
-      พบครั้งแรกในทวีปเอเชีย ยุงลายบ้านเป็นพาหะหลัก <br>มียุงลายสวนเป็นพาหะรองนำเชื้อไวรัสเดงกี
-      ทำให้เกิด<br>โรคไข้เลือดออก พบผู้ป่วยทุกเพศ ทุกวัย โดยเฉพาะ<br>ผู้ที่ขาดภูมิคุ้มกัน
+    <tr><td>
+      โรคไข้เลือดออกเดงกี เป็นโรคติดเชื้อไวรัสเดงกีที่มียุงลายเป็นแมลงนำโรค 
+      โรคนี้ได้กลายเป็นปัญหาสาธารณสุขในหลายประเทศทั่วโลก 
+      เนื่องจากโรคได้แพร่กระจายอย่างกว้างขวางและจำนวนผู้ป่วยเพิ่มขึ้นอย่างมากใน 30 
+      ปีที่ผ่านมา มากกว่า 100 ประเทศที่โรคนี้กลายเป็นโรคประจำถิ่น 
+      และโรคนี้ยังคุกคามต่อสุขภาพของประชากรโลกมากกว่าร้อยละ 40 
+      (2,500 ล้านคน) โดยเฉพาะอย่างยิ่งจะพบมากในประเทศเขตร้อนและเขตอบอุ่น 
+      ซึ่งร้อยละ 70 ของผู้ป่วยทั้งหมดมาจากประเทศในภูมิภาคเอเชีย
     </td></tr>
   </table>
-  <table style='margin-bottom: 20px; text-align: left;'>
+  <table style='margin-bottom: 20px;'>
     <tr><td class="index">
-      อาการที่ควรเฝ้าระวัง
+      วิธีการติดต่อ
     </td></tr>
-    <tr><td style="padding-top: 10px;"><a class='order'>1.</a> หลังจากถูกยุงลายที่มีเชื้อกัดประมาณ 5-8 วัน จะมีอาการไข้ 
-    </td></tr>
-    <tr><td><a class='order'>2.</a> มีอาการไข้สูง ติดต่อกัน 2-7 วัน 
-    </td></tr>
-    <tr><td><a class='order'>3.</a> หน้าแดง ปวดศีรษะ ปวดกล้ามเนื้อ ปวดกระดูก ปวดเบ้าตา บางราย มีปวดท้อง อาเจียน เบื่ออาหาร 
-    </td></tr>
-    <tr><td><a class='order'>4.</a> มีจุดแดงเล็กๆ ตามแขน ขา ลำตัว รักแร้ อาจมีเลือดกำเดาไหลและเลือดออกตามไรฟัน
-    </td></tr>
-    <tr><td><a class='order'>5.</a> อาการทั่วไปคล้ายเป็นหวัด แต่มักไม่ไอ และไม่มีน้ำมูก
+    <tr><td style="padding-top: 10px;">โรคไข้เลือดออกไม่สามารถติดต่อจากคนสู่คนได้โดยตรง 
+      ต้องอาศัยยุงลายเป็นพาหะนำโรค การติดต่อจึงต้องใช้เวลาในผู้ป่วยและในยุง 
+      ระยะที่ผู้ป่วยสามารถแพร่เชื้อได้คือ 2 วันก่อนถึง 6 วันหลังวันที่เริ่มแสดงอาการ 
+      และเมื่อยุงได้รับเชื้อไวรัสเดงกีจากผู้ป่วยจะใช้เวลาประมาณ 8 - 12 วันในการเพิ่มจำนวนเชื้อไวรัสจนมากพอ 
+      จึงจะเป็นระยะติดต่อจากยุงสู่คนได้
     </td></tr>
   </table>
-  <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
+  <table style='margin-bottom: 20px;'>
+    <tr><td class="index">
+      อาการของโรคไข้เลือดออก
+    </td></tr>
+    <tr><td style="padding: 10px;">
+      หลังจากที่ถูกกัดประมาณ 3-8 วัน ก็จะเริ่มมีอาการของไข้เลือดออกเกิดขึ้น ดังนี้</td></tr>
+    <tr><td style="padding: 10px;">
+      <a class="order">1.</a>ตรวจสอบวันหมดอายุและสภาพถุงทรายอะเบทก่อนใช้งาน</td></tr>
+  </table>
+  <a>ที่มาของข้อมูล : กรมควบคุมโรค กระทรวงสาธารณสุข</a>
   </p>
   <footer>
     <p>จัดทำโดย<br>
