--- a/abate.html
+++ b/abate.html
@@ -36,6 +36,44 @@
           3 เดือน (ต่อการใช้ 1 ครั้ง)
     </td></tr>
     </table>
+  </table>
+  <table style='margin-bottom: 10px;'>
+  <tr><td class="index" style="padding: 10px;">
+      วิธีใช้งานทรายอะเบท
+    </td></tr>
+  </table>
+  <table class="info">
+    <tr><td style="padding: 10px;">
+      <a class="order">1.</a>ตรวจสอบวันหมดอายุและสภาพถุงทรายอะเบทก่อนใช้งาน</td></tr><tr><td>
+      <img class="mosquito-image" src="/img/temephos.png"></td></tr><tr><td style="padding: 10px;">
+      <a class="order">2.</a>ตรวจสอบความเข้มข้นของทีมีฟอส (Temephos) และขนาดบรรจุของทรายอะเบท</td></tr><tr><td>
+      <img class="mosquito-image" src="/img/gram.png"></td></tr><tr><td style='padding: 10px;'>
+      <a class="order">3.</a>ใส่ในภาชนะที่ใส่น้ำใช้ในอัตรา 1 กรัมต่อน้ำ 10 ลิตรหรือโรยในขาตู้กันมด แจกัน</td></tr>
+    </table>
+  <table style='margin-bottom: 20px;'>
+    <tr><td class="index">
+      ตัวอย่างทรายอะเบท
+    <tr><td style="padding: 10px;"><a class='order'>กรีนฟอส (Greenphos)</a>
+    </td></tr>
+    <tr><td><img class="mosquito-image" src="/img/greenphos.png">
+    </td></tr>
+    <tr><td style="padding: 10px;"><a class='order'>การ์โต้ (Karto)</a>
+    </td></tr>
+    <tr><td><img class="mosquito-image" src="/img/karto.jpeg">
+    </td></tr>
+    <tr><td style="padding: 10px;"><a class='order'>รูอิส (Rueis)</a>
+    </td></tr>
+    <tr><td><img class="mosquito-image" src="/img/rueis.png">
+    </td></tr>
+    <tr><td style="padding: 10px;"><a class='order'>โอเชี่ยน (Ocean)</a>
+    </td></tr>
+    <tr><td><img class="mosquito-image" src="/img/ocean.jpg">
+    </td></tr>
+    <tr><td style="padding: 10px;"><a class='order'>เทมีคอล 1% เอสจี (Temecal 1% SG)</a>
+    </td></tr>
+    <tr><td><img class="mosquito-image" src="/img/temecal.jpg">
+    </td></tr>
+  </table>
 
     <a>ที่มาของข้อมูล : กรมวิทยาศาสตร์การแพทย์ กระทรวงสาธารณสุข</a>
   </p>
