--- a/DHF.html
+++ b/DHF.html
@@ -17,7 +17,7 @@
     </table>
   </h1>
   <p class="info">
-    <table style='margin-bottom: 20px;'>
+    <table class="info" style='margin-bottom: 20px;'>
     <tr><td>
       โรคไข้เลือดออกเดงกี เป็นโรคติดเชื้อไวรัสเดงกีที่มียุงลายเป็นแมลงนำโรค 
       โรคนี้ได้กลายเป็นปัญหาสาธารณสุขในหลายประเทศทั่วโลก 
@@ -28,7 +28,7 @@
       ซึ่งร้อยละ 70 ของผู้ป่วยทั้งหมดมาจากประเทศในภูมิภาคเอเชีย
     </td></tr>
   </table>
-  <table style='margin-bottom: 20px;'>
+  <table class="info" style='margin-bottom: 20px;'>
     <tr><td class="index">
       วิธีการติดต่อ
     </td></tr>
