--- a/calculator.html
+++ b/calculator.html
@@ -27,19 +27,19 @@
   <div id="select-zone">
   <table>
     <tr>
-      <td><img onclick="select_container(1);" class="container-img" src="/img/container1.jpg"></td>
-      <td><img onclick="select_container(2);" class="container-img" src="/img/container2.jpg"></td>
+      <td><img onclick="select_container(1);" class="container-img" src="/img/container1.png"></td>
+      <td><img onclick="select_container(2);" class="container-img" src="/img/container2.png"></td>
     </tr>
     <tr>
-      <td><img onclick="select_container(3);" class="container-img" src="/img/container3.jpg"></td>
+      <td><img onclick="select_container(3);" class="container-img" src="/img/container3.png"></td>
       <td><img onclick="select_container(4);" class="container-img" src="/img/container4.png"></td>
     </tr>
     <tr>
-      <td><img onclick="select_container(5);" class="container-img" src="/img/container5.jpg"></td>
-      <td><img onclick="select_container(6);" class="container-img" src="/img/container6.jpg"></td>
+      <td><img onclick="select_container(5);" class="container-img" src="/img/container5.png"></td>
+      <td><img onclick="select_container(6);" class="container-img" src="/img/container6.png"></td>
     </tr>
     <tr>
-      <td><img onclick="select_container(7);" class="container-img" src="/img/container7.jpg"></td>
+      <td><img onclick="select_container(7);" class="container-img" src="/img/container7.png"></td>
       <td><img onclick="select_container(8);" class="container-img" src="/img/container8.png"></td>
     </tr>
     
