--- a/aedes.html
+++ b/aedes.html
@@ -20,7 +20,7 @@
     <table style='margin-bottom: 20px;'>
       <tr><td class="index">
         ยุงเป็นพาหะโรคใดบ้าง?
-      <tr><td style="padding: 10px;"><a class='order'>ยุงลาย</a> ไข้เลือดออก ชิคุนกุนยา ไข้เหลือง ไข้ซิก้า 
+      <tr><td style="padding: 10px;"><a class='order'>ยุงลาย</a> ไข้เลือดออก ชิคุนกุนยา ไข้เหลือง <br>ไข้ซิก้า 
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/aedes.webp">
       </td></tr>
@@ -28,7 +28,7 @@
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/mansonia.jpg">
       </td></tr>
-      <tr><td style="padding: 10px;"><a class='order'>ยุงรำคาญ</a> โรคฟิลาเรีย ไข้สมองอักเสบ ไข้เวสต์ไนล์ 
+      <tr><td style="padding: 10px;"><a class='order'>ยุงรำคาญ</a> โรคฟิลาเรีย ไข้สมองอักเสบ <br>ไข้เวสต์ไนล์ 
       </td></tr>
       <tr><td><img class="mosquito-image" src="/img/culex.jpeg">
       </td></tr>
