--- a/calculator.html
+++ b/calculator.html
@@ -48,7 +48,7 @@
   </div>
   <div id="calculating-zone"></div>
   <p id="alert-zone"></p>
-  <p2 style="margin-bottom: 10px;">พบข้อสงสัย? &#9758;<a href="problem.html">แตะที่นี่</a>&#9756;
+  <p2 style="margin-bottom: 10px;">คำถามที่พบบ่อย &#9758;<a href="problem.html">กดที่นี่</a>&#9756;
   </p2>
   <footer>
     <p>จัดทำโดย<br>
