--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <table><tr><td>ชื่อนวัตกรรม</td></tr></table>
 </h1>
 <p class="info">
-  <button class='index-button' onclick="goToPage(1)">&#129699; เครื่องมือวัดปริมาณทรายอะเบท &#128208;</button>
-  <button class='index-button' onclick="goToPage(5)">&#129439;ข้อมูลทรายอะเบท&#129514;</button>
+  <button id='main-button' onclick="goToPage(1)">&#129699; เครื่องมือวัดปริมาณทรายอะเบท &#128208;</button>
   <table style="padding: 10px; background-color: rgba(255, 186, 186, 0.368); border-radius: 10px;">
     <tr><td colspan='2' class="space"><a class='index'>&#128209; ความรู้เกี่ยวกับโรคไข้เลือดออก &#128209;</td></tr>
     <tr><td><button class='space2 knowledge-button info' onclick="goToPage(2)">โรคไข้เลือดออก</button></td></tr>
+    <tr><td><button class='knowledge-button info' onclick="goToPage(5)">ข้อมูลทรายอะเบท</button></td></tr>
     <tr><td><button class='knowledge-button info' onclick="goToPage(3)">ทำความรู้จักกับยุงลาย</button></td></tr>
     <tr><td><button class='knowledge-button info' onclick="goToPage(4)">5ป 1ข ปราบยุงลาย ป้องกันไข้เลือดออก</button></td></tr>
     <tr><td><button class='knowledge-button info' onclick="goToPage(6)">3 เก็บ ป้องกัน 3 โรค</button></td></tr>
