--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
     <tr><td><button class='knowledge-button info' onclick="goToPage(7)">คำถามที่พบบ่อย</button></td></tr>
   </table>
 </p>
+<div>
+  <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+  <img src="https://hitwebcounter.com/counter/counter.php?page=10143105&style=0038&nbdigits=5&type=page&initCount=0" title="Counter Widget" Alt="Visit counter For Websites" border="0"/></a>     
+</div>
 <footer>
   <p>จัดทำโดย<br>
     นักศึกษาฝึกประสบการณ์ วิทยาลัยการสาธารณสุขสิรินธร<br>จังหวัดชลบุรี<br>
